tests/ui/async-await/async-closures/post-mono-higher-ranked-hang-2.stderr
error: reached the recursion limit while instantiating `<{async block@$DIR/post-mono-higher-ranked-hang-2.rs:11:14: 11:24} as Future>::poll`
  --> $SRC_DIR/core/src/ops/coroutine/adapters.rs:LL:COL
   |
note: `<ops::coroutine::adapters::CoroutineFuture<C> as Future>::poll` defined here
  --> $SRC_DIR/core/src/ops/coroutine/adapters.rs:LL:COL

error: aborting due to 1 previous error

